// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin.ts utilities > squircle-b-md snapshot 1`] = `
".squircle-b-md {
    border-bottom-left-radius: 0.375rem;
    border-bottom-right-radius: 0.375rem;
    @supports (corner-shape: superellipse(2)) {
      --squircle-r: calc(0.375rem * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      border-bottom-left-radius: var(--squircle-r);
      border-bottom-right-radius: var(--squircle-r);
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`plugin.ts utilities > squircle-bl-md snapshot 1`] = `
".squircle-bl-md {
    border-bottom-left-radius: 0.375rem;
    @supports (corner-shape: superellipse(2)) {
      border-bottom-left-radius: calc(0.375rem * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`plugin.ts utilities > squircle-br-md snapshot 1`] = `
".squircle-br-md {
    border-bottom-right-radius: 0.375rem;
    @supports (corner-shape: superellipse(2)) {
      border-bottom-right-radius: calc(0.375rem * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`plugin.ts utilities > squircle-e-md snapshot 1`] = `
".squircle-e-md {
    border-start-end-radius: 0.375rem;
    border-end-end-radius: 0.375rem;
    @supports (corner-shape: superellipse(2)) {
      --squircle-r: calc(0.375rem * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      border-start-end-radius: var(--squircle-r);
      border-end-end-radius: var(--squircle-r);
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`plugin.ts utilities > squircle-ee-md snapshot 1`] = `
".squircle-ee-md {
    border-end-end-radius: 0.375rem;
    @supports (corner-shape: superellipse(2)) {
      border-end-end-radius: calc(0.375rem * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`plugin.ts utilities > squircle-es-md snapshot 1`] = `
".squircle-es-md {
    border-end-start-radius: 0.375rem;
    @supports (corner-shape: superellipse(2)) {
      border-end-start-radius: calc(0.375rem * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`plugin.ts utilities > squircle-l-md snapshot 1`] = `
".squircle-l-md {
    border-top-left-radius: 0.375rem;
    border-bottom-left-radius: 0.375rem;
    @supports (corner-shape: superellipse(2)) {
      --squircle-r: calc(0.375rem * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      border-top-left-radius: var(--squircle-r);
      border-bottom-left-radius: var(--squircle-r);
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`plugin.ts utilities > squircle-md snapshot 1`] = `
".squircle-md {
    border-radius: 0.375rem;
    @supports (corner-shape: superellipse(2)) {
      --squircle-r: calc(0.375rem * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      border-radius: var(--squircle-r);
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`plugin.ts utilities > squircle-r-md snapshot 1`] = `
".squircle-r-md {
    border-top-right-radius: 0.375rem;
    border-bottom-right-radius: 0.375rem;
    @supports (corner-shape: superellipse(2)) {
      --squircle-r: calc(0.375rem * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      border-top-right-radius: var(--squircle-r);
      border-bottom-right-radius: var(--squircle-r);
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`plugin.ts utilities > squircle-s-md snapshot 1`] = `
".squircle-s-md {
    border-start-start-radius: 0.375rem;
    border-end-start-radius: 0.375rem;
    @supports (corner-shape: superellipse(2)) {
      --squircle-r: calc(0.375rem * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      border-start-start-radius: var(--squircle-r);
      border-end-start-radius: var(--squircle-r);
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`plugin.ts utilities > squircle-se-md snapshot 1`] = `
".squircle-se-md {
    border-start-end-radius: 0.375rem;
    @supports (corner-shape: superellipse(2)) {
      border-start-end-radius: calc(0.375rem * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`plugin.ts utilities > squircle-ss-md snapshot 1`] = `
".squircle-ss-md {
    border-start-start-radius: 0.375rem;
    @supports (corner-shape: superellipse(2)) {
      border-start-start-radius: calc(0.375rem * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`plugin.ts utilities > squircle-t-md snapshot 1`] = `
".squircle-t-md {
    border-top-left-radius: 0.375rem;
    border-top-right-radius: 0.375rem;
    @supports (corner-shape: superellipse(2)) {
      --squircle-r: calc(0.375rem * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      border-top-left-radius: var(--squircle-r);
      border-top-right-radius: var(--squircle-r);
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`plugin.ts utilities > squircle-tl-md snapshot 1`] = `
".squircle-tl-md {
    border-top-left-radius: 0.375rem;
    @supports (corner-shape: superellipse(2)) {
      border-top-left-radius: calc(0.375rem * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`plugin.ts utilities > squircle-tr-md snapshot 1`] = `
".squircle-tr-md {
    border-top-right-radius: 0.375rem;
    @supports (corner-shape: superellipse(2)) {
      border-top-right-radius: calc(0.375rem * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;
